--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,9 @@ server.port=8080
 #spring.datasource.password=os$4tet
 #spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
+#mybatis.config-location = classpath:mapper/config/sqlMapConfig.xml
+mybatis.mapper-locations = classpath:org/foxconn/mapper/**.xml
+mybatis.type-aliases-package = org.foxconn.dao
 
 spring.datasource.url = jdbc:mysql://localhost:3306/mysql
  spring.datasource.username = root
