--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,2 @@
 eclipse.preferences.version=1
-encoding//src/main/java/org/foxconn/client/CxfClient.java=UTF-8
-encoding//src/main/java/org/foxconn/config/CxfConfig.java=UTF-8
-encoding//src/main/java/org/foxconn/service/RestService.java=UTF-8
+encoding//src/main/resources/application.properties=UTF-8
