--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,18 @@
 server.port=8080
-#
-#spring.datasource.url=jdbc:sqlserver://10.67.44.194:3000;DatabaseName=efoxsfclxhp_test
-#spring.datasource.username=onsitetest
-#spring.datasource.password=os$4tet
-#spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+
+spring.datasource.url=jdbc:sqlserver://10.67.44.194:3000;DatabaseName=efoxsfclxhp_test
+spring.datasource.username=onsitetest
+spring.datasource.password=os$4tet
+spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
 #mybatis.config-location = classpath:mapper/config/sqlMapConfig.xml
 mybatis.mapper-locations = classpath:org/foxconn/mapper/**.xml
 mybatis.type-aliases-package = org.foxconn.dao
 
-spring.datasource.url = jdbc:mysql://localhost:3306/mysql
- spring.datasource.username = root
- spring.datasource.password = 1234
- spring.datasource.driverClassName = com.mysql.jdbc.Driver
+#spring.datasource.url = jdbc:mysql://localhost:3306/mysql
+# spring.datasource.username = root
+# spring.datasource.password = 1234
+# spring.datasource.driverClassName = com.mysql.jdbc.Driver
 
 
 
