--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,14 @@
-server.port=8080
+server.port=2489
 
-spring.datasource.url=jdbc:sqlserver://10.67.44.194:3000;DatabaseName=efoxsfclxhp_test
-spring.datasource.username=onsitetest
-spring.datasource.password=os$4tet
+#spring.datasource.url=jdbc:sqlserver://10.67.44.194:3000;DatabaseName=efoxsfclxhp_test
+#spring.datasource.username=onsitetest
+#spring.datasource.password=os$4tet
+#spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+
+
+spring.datasource.url=jdbc:sqlserver://10.67.70.75:3000;DatabaseName=efoxsfclxhp
+spring.datasource.username=essnlxddl
+spring.datasource.password=Fdblx1601
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
 #mybatis.config-location = classpath:mapper/config/sqlMapConfig.xml
@@ -13,7 +19,6 @@ mybatis.type-aliases-package = org.foxconn.dao
 # spring.datasource.username = root
 # spring.datasource.password = 1234
 # spring.datasource.driverClassName = com.mysql.jdbc.Driver
-
 
 
  logging.level.root=info
