--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,15 +5,15 @@ server.port=2489
 #spring.datasource.password=os$4tet
 #spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
-spring.datasource.url=jdbc:sqlserver://10.67.70.73:3000;DatabaseName=efoxsfcphara
-spring.datasource.username=msd2ddl
-spring.datasource.password=Fdblv1601
-spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-
-#spring.datasource.url=jdbc:sqlserver://10.67.70.75:3000;DatabaseName=efoxsfclxhp
-#spring.datasource.username=essnlxddl
-#spring.datasource.password=Fdblx1601
+#spring.datasource.url=jdbc:sqlserver://10.67.70.73:3000;DatabaseName=efoxsfcphara
+#spring.datasource.username=msd2ddl
+#spring.datasource.password=Fdblv1601
 #spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+
+spring.datasource.url=jdbc:sqlserver://10.67.70.75:3000;DatabaseName=efoxsfclxhp
+spring.datasource.username=essnlxddl
+spring.datasource.password=Fdblx1601
+spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
 #mybatis.config-location = classpath:mapper/config/sqlMapConfig.xml
 mybatis.mapper-locations = classpath:org/foxconn/mapper/**.xml
